# PFA_SECOT

./: .gitignore  ATTACK_GUIDE.md  PFA_RAPPORT_TEMPLATE.md  RAPPORT.md  README.md  ROUTER_GUIDE.md  VICTIM_GUIDE.md  deploy_all.py  frontpage.md  install_dependencies_attacker.py  install_dependencies_victim.py  requirements.txt
.f/: driver.py
SECoT/: DEVELOPMENT_NOTES.md  README.md  SECoT.ino
SECoT/data/: index.html  script.js  style.css
SECoT/src/attacks/: ArpSpoofAttack.cpp  ArpSpoofAttack.h  Attack.cpp  Attack.h  AttackManager.cpp  AttackManager.h  BeaconFloodAttack.cpp  BeaconFloodAttack.h  DeauthAttack.cpp  DeauthAttack.h  EvilTwinAttack.cpp  EvilTwinAttack.h  MqttSpoofAttack.cpp  MqttSpoofAttack.h  PassiveSniffAttack.cpp  PassiveSniffAttack.h  ProbeSpamAttack.cpp  ProbeSpamAttack.h
SECoT/src/config/: Config.h
SECoT/src/interfaces/: SerialInterface.cpp  SerialInterface.h  TFTInterface.cpp  TFTInterface.h  WebInterface.cpp  WebInterface.h
SECoT/src/utils/: Logger.cpp  (+3 more)
VictimProjects/: deploy.py
VictimProjects/MergedWeatherSmartLight/: README.md
VictimProjects/SmartLight/: README.md
VictimProjects/WeatherStation/: README.md
cli_tool/: Cargo.toml  README.md
cli_tool/src/: main.rs
cli_tool/src/attack_modules/: mitm_attacks.rs  mod.rs  mqtt_attacks.rs  wifi_arp_spoof.rs  wifi_deauth.rs  wifi_evil_twin.rs  wifi_scan.rs
cli_tool/src/data/: config.rs  logger.rs  mod.rs  models.rs
cli_tool/src/parsers/: airodump_parser.rs  cracker_parser.rs  mod.rs  mqtt_packet_parser.rs  tshark_parser.rs
cli_tool/src/ui/: analysis.rs  formatter.rs  mod.rs
(+88 files in other folders)
