[package]
name = "secot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
tokio = { version = "1.37.0", features = ["full"]}
colored = "2.0.4"
prettytable-rs = "0.10.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

